fix navbar toggler z-index

--- a/app/Resources/scss/components/navbar.scss
+++ b/app/Resources/scss/components/navbar.scss
@@ -13,3 +13,7 @@
         border-bottom: 1px solid rgba($black,.2);
     }
 }
+
+.navbar-toggler {
+    z-index: $zindex-navbar;
+}
